Create a service to retrieve all the categories and use it in the nav component to render after the list of the categories as list of items in html and fix a error with limit and offset assignation

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -70,6 +70,12 @@
         margin: 0 .2em;
         color: inherit;
         text-decoration: none;
+        padding: .5em;
+        &.active{
+          border: 2px solid #a9d0b8;
+          border-radius: 5px;
+          color: #a9d0b8;
+        }
       }
     }
   }
