--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,8 @@
 <div class="d-flex-product">
   <div class="d-flex-product--image">
-    <app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
+    <a [routerLink]="['/product', product.id]">
+      <app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
+    </a>
   </div>
 
   <h2>{{ product.price | currency }}</h2>
