--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,1 @@
-<app-products [products]="products" (loadMoreProducts)="loadMore()"></app-products>
+<app-products [productId]="productId" [products]="products" (loadMoreProducts)="loadMore()"></app-products>
