--- a/src/app/components/product/product.component.scss
+++ b/src/app/components/product/product.component.scss
@@ -14,6 +14,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    a{
+      color: #000;
+    }
   }
 
   h2{
