--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,5 +1,3 @@
-<button (click)="createProduct()">Create Product</button>
-<button (click)="onShowProductDetails('1234')">Hello from the other side</button>
 <div class="products--grid">
   <app-product
     [product]="product"
@@ -24,3 +22,5 @@
   </div>
 </div>
 <button (click)="loadMore()">Load more</button>
+<button (click)="createProduct()">Create new Product</button>
+<button (click)="onShowProductDetails('1234')">Load Not found product</button>
