Create a guard to allow the user access to the profile route

--- a/src/app/website/components/nav/nav.component.scss
+++ b/src/app/website/components/nav/nav.component.scss
@@ -87,6 +87,9 @@
   .info {
     display: flex;
     align-items: center;
+    a{
+      color: #000;
+    }
     .account {
       margin-right: .5em;
     }
