--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -40,7 +40,7 @@
     <div class="info">
       <button *ngIf="!profile else elseBlock" (click)="login()">Login</button>
       <ng-template #elseBlock>
-        {{profile?.email}}
+        <a routerLink="/profile"> {{profile?.email}} </a>
       </ng-template>
       <div class="cart">
         <a href="">
