--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -41,6 +41,7 @@
       <button *ngIf="!profile else elseBlock" (click)="login()">Login</button>
       <ng-template #elseBlock>
         <a routerLink="/profile"> {{profile?.email}} </a>
+        <button (click)="logout()">Logout</button>
       </ng-template>
       <div class="cart">
         <a href="">
