Create a guard to manage if the user wants to exit from the register component and show an confirm alert ( from the component )

--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -39,6 +39,7 @@
     </nav>
     <div class="info">
       <button *ngIf="!profile else elseBlock" (click)="login()">Login</button>
+      <button routerLink="/register">Register</button>
       <ng-template #elseBlock>
         <a routerLink="/profile"> {{profile?.email}} </a>
         <button (click)="logout()">Logout</button>
